--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ python = "^3.9"
 pytest = "^7.4.0"
 tox = "^4.6.3"
 
+
+[tool.poetry.group.format.dependencies]
+black = "^23.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
