Add dep `mypy` to group `type`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ tox = "^4.6.3"
 [tool.poetry.group.format.dependencies]
 black = "^23.3.0"
 
+
+[tool.poetry.group.type.dependencies]
+mypy = "^1.4.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
