--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,5 @@ commands =
 base_python = python3.9
 description = run type checks
 commands =
-    poetry install --only type
+    poetry install --only main,test,type
     poetry run mypy {posargs:plogic tests}
