--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires =
     tox>=4
-env_list = format-check, type-check, py{39,310,311}
+env_list = style-check, type-check, py{39,310,311}
 
 [testenv]
 allowlist_externals = poetry
@@ -10,12 +10,13 @@ commands =
     poetry install --only main,test
     poetry run pytest {posargs:tests}
 
-[testenv:format-check]
+[testenv:style-check]
 base_python = python3.9
-description = check compliance with black style
+description = check compliance with black and flake8 style
 commands =
-    poetry install --only format
+    poetry install --only style
     poetry run black --check {posargs:plogic tests}
+    poetry run flake8
 
 [testenv:type-check]
 base_python = python3.9
