--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,40 @@ version = "0.1.0"
 description = "Python package for propositional logic."
 authors = ["Ederic <edericoytas@gmail.com>"]
 license = "MIT"
+homepage = "https://github.com/ederic-oytas/plogic"
+repository = "https://github.com/ederic-oytas/plogic"
+keywords = [
+    "and",
+    "biconditional",
+    "conditional",
+    "conjunction",
+    "connective",
+    "disjunction",
+    "if and only if",
+    "iff",
+    "implies",
+    "implication",
+    "logic",
+    "logical connective",
+    "negation",
+    "not",
+    "or",
+    "plogic",
+    "proposition",
+    "propositional calculus",
+    "propositional logic",
+    "sentence",
+    "sentential calculus",
+    "sentential logic",
+    "statement logic",
+    "zeroth-order logic",
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Typing :: Typed",
+]
 readme = "README.md"
 
 [tool.poetry.dependencies]
