--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,60 @@
-site_name: My Docs
+# Some site and repo information
+site_name: Python `test_oyster` Docs
+repo_url: https://github.com/ederic-oytas/plogic
+repo_name: ederic-oytas/plogic
+site_description: Documentation for the `plogic` Python package.
+site_author: Ederic Oytas
+
+# Uses material theme
+theme:
+  name: "material"
+
+  # Adds an option to change the pallette (light, dark)
+  palette:
+  
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
+# Plugins to be used
+plugins:
+
+  # Gives special syntax to generate documentation from docstrings. See
+  # docs/reference.md for an example.
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          options:
+            show_source: False       # Hides source code
+            show_root_heading: True
+  - search  # Builtin plugin which adds a search bar
+
+# Navigation buttons (tab on the left)
+# Format:
+#   - <name>: <source-file>
+nav:
+  - Home: index.md
+  - User Guide: user-guide.md
+  - Reference: reference.md
+
+# Markdown extensions
+markdown_extensions:
+  - pymdownx.highlight:   # For highlighting code blocks
+      linenums: true
+  - pymdownx.superfences  # Makes `highlight` also target ``` blocks
+
+# If these extra files/folders are updated, then the website created by
+# `mkdocs serve` will be reloaded.
+watch:
+  - plogic
