--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Some site and repo information
-site_name: Python `test_oyster` Docs
+site_name: Plogic Docs
 repo_url: https://github.com/ederic-oytas/plogic
 repo_name: ederic-oytas/plogic
 site_description: Documentation for the `plogic` Python package.
@@ -38,6 +38,7 @@ plugins:
           options:
             show_source: False       # Hides source code
             show_root_heading: True
+            show_signature_annotations: True
   - search  # Builtin plugin which adds a search bar
 
 # Navigation buttons (tab on the left)
@@ -53,6 +54,8 @@ markdown_extensions:
   - pymdownx.highlight:   # For highlighting code blocks
       linenums: true
   - pymdownx.superfences  # Makes `highlight` also target ``` blocks
+  - pymdownx.inlinehilite
+  - pymdownx.mark
 
 # If these extra files/folders are updated, then the website created by
 # `mkdocs serve` will be reloaded.
