--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ base_python = python3.9
 description = check compliance with black and flake8 style
 commands =
     poetry install --only style
-    poetry run black --check {posargs:plogic tests}
+    poetry run black --check {posargs:flogic tests}
     poetry run flake8
 
 [testenv:type-check]
@@ -28,4 +28,4 @@ base_python = python3.9
 description = run type checks
 commands =
     poetry install --only main,test,type
-    poetry run mypy {posargs:plogic tests}
+    poetry run mypy {posargs:flogic tests}
