--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ mypy = "^1.4.1"
 mkdocs = "^1.4.3"
 mkdocs-material = "^9.1.17"
 mkdocstrings = {extras = ["python"], version = "^0.22.0"}
+mkdocs-autorefs = "^0.4.1"
 
 
 [tool.black]
