Add specific directories for flake8

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ description = check compliance with black and flake8 style
 commands =
     poetry install --only style
     poetry run black --check {posargs:classical_logic tests}
-    poetry run flake8
+    poetry run flake8 {posargs:classical_logic tests}
 
 [testenv:type-check]
 base_python = python3.9
