Move type-check, remove poetry run

--- a/tox.ini
+++ b/tox.ini
@@ -13,19 +13,19 @@ allowlist_externals = poetry
 description = run unit tests
 commands =
     poetry install --only main,test
-    poetry run pytest {posargs:tests}
-
-[testenv:style-check]
-base_python = python3.9
-description = check compliance with black and flake8 style
-commands =
-    poetry install --only style
-    poetry run black --check {posargs:classical_logic tests}
-    poetry run flake8 {posargs:classical_logic tests}
+    pytest {posargs:tests}
 
 [testenv:type-check]
 base_python = python3.9
 description = run type checks
 commands =
     poetry install --only main,test,type
-    poetry run mypy {posargs:classical_logic tests}
+    mypy {posargs:classical_logic tests}
+
+[testenv:style-check]
+base_python = python3.9
+description = check compliance with black and flake8 style
+commands =
+    poetry install --only style
+    black --check {posargs:classical_logic tests}
+    flake8 {posargs:classical_logic tests}
